# zypak

./: .clang-format  .gitmodules  LICENSE  Makefile  README.md  compile_flags.txt  configure  meson.build  rules.mk  zypak-wrapper.sh
.metals/: metals.lock.db
src/: meson.build
src/base/: base.h  container_util.h  cstring_view.h  debug.cc  debug.h  enum_util.h  env.cc  env.h  epoll.cc  epoll.h  evloop.cc  evloop.h  fd_map.cc  fd_map.h  file_util.h  guarded_value.h  launcher.cc  launcher.h  meson.build  singleton.h  socket.cc  socket.h  str_util.h  strace.cc  strace.h  (+2 more)
src/preload/child/mimic_strategy/: fd_storage.cc  fd_storage.h  initialize.cc  localtime.cc  meson.build  open_urandom.cc  urandom_fd.cc  urandom_fd.h
src/preload/host/: exec_zypak_sandbox.cc  meson.build  sandbox_path.cc  sandbox_path.h  sandbox_suid.cc
src/preload/host/file_portal/: casts.cc  native_dialog_actions.cc  use_native_file_chooser.cc
src/preload/host/mimic_strategy/: initialize.cc
src/preload/host/spawn_strategy/: bus_safe_fork.cc  initialize.cc  meson.build  no_close_host_fd.cc  process_override.cc  spawn_launcher_delegate.cc  spawn_launcher_delegate.h  spawn_request.cc  spawn_request.h  supervisor.cc  supervisor.h
src/preload/host/spawn_strategy/close/: no_close_host_fd.cc  no_close_host_fd.h
src/sandbox/: epoll.cc  epoll.h  launcher.cc  launcher.h  main.cc  meson.build  socket.cc  socket.h
src/sandbox/mimic_strategy/: command.h  fork.cc  fork.h  mimic_launcher_delegate.cc  mimic_launcher_delegate.h  reap.cc  reap.h  status.cc  status.h  zygote.cc  zygote.h
src/sandbox/spawn_strategy/: run.cc  run.h  spawn_launcher_delegate.cc  spawn_launcher_delegate.h  supervisor_communication.h
src/sandbox/zygote/: command.h  fork.cc  fork.h  reap.cc  reap.h  status.cc  status.h  zygote.cc  zygote.h
(+39 files in other folders)
